# SignOra

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
data/training/: sample_dataset.json  youtube_asl_pairs.json  youtube_asl_sample_manifest.json
docs/: ASL_AND_POSE.md  DEVNET.md  MECHANISM.md  MECHANISM_PAPER_V05.md  PUBLISH.md  V07.md  pose-gate-calibration.md
models/: gloss_lookup.json
neurons/: base.py  miner.py  validator.py
scripts/: build_training_pairs.py  calibrate_pose_gate.py  devnet_bootstrap.py  download_dwpose_models.py  local_devnet.sh  prepare_wlasl_dataset.py  prepare_youtube_asl_dataset.py  register_local_subnet.py  run_challenge_server.py  train_translator.py
signora/: __init__.py
signora/challenge/: crypto.py  server.py  store.py
signora/core/: config.py  constants.py  types.py
signora/data/: wlasl.py  wlasl_video.py  youtube_asl.py
signora/dbcp/: protocol.py
signora/pose/: __init__.py  ensemble.py  extractor.py  gate.py  metrics.py  scoring.py
signora/pose/backends/: __init__.py  base.py  dwpose_onnx.py  mediapipe_backend.py  optical_flow.py
signora/protocol/: __init__.py  synapses.py
signora/translation/: baseline.py  features.py  sequence_model.py
signora/validation/: __init__.py  comp_a.py  comp_b.py  weight_committer.py  weights.py
tests/: test_core.py  test_v07.py  test_wlasl.py
